k8s/manifests/deployment-zone-aware.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeserver-zone-aware
  labels:
    app: nodeserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodeserver
  template:
    metadata:
      labels:
        app: nodeserver
    spec:
      containers:
        - name: nodeserver
          image: npmserver:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: npm
              containerPort: 8080
          resources:
            limits:
              cpu: 40m
              memory: 100Mi
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: nodeserver
