k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodeserver
  name: nodeserver-svc
spec:
  selector:
    app: nodeserver
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: npm
